basic home page

--- a/main/templates/explore.html
+++ b/main/templates/explore.html
@@ -2,12 +2,13 @@
 {% load static %}
 
 {% block title %}
-title
+explore | crumbo
 {% endblock %}
 
 {% block styles %}
 {% endblock %}
 
 {% block body %}
-<h1>hello!</h1>
+<a href="/"><button>&larr; back home</button></a>
+<h1>food,,,</h1>
 {% endblock %}
