--- a/main/templates/home.html
+++ b/main/templates/home.html
@@ -8,12 +8,18 @@ crumbo
 <link rel="stylesheet" href="{% static 'css/home.css' %}">
 {% endblock %}
 
+
+
 {% block body %}
 <div class="home-container">
     <div class="home-content">
-        <h1>crumbo</h1>
-        <p>cxlu x grac food adventures :^)</p>
-        <a href="/explore"><button>explore &rarr;</button></a>
+        <img id="home-crumbo" src="../static/img/crumbo.png"/>
+        <div id="home-icons">
+            <p id="home-description"><em>our food adventures :~)</em></p>
+            <a href="/explore"><button id="home-explore-button">explore &rarr;</button></a>
+            <img id="home-grac" src="../static/img/grac-transparent-color.png"/>
+            <img id="home-cxlu" src="../static/img/cxlu-transparent-color.png"/>
+        </div>
     </div>
 </div>
    
