favicon + font update

--- a/main/static/css/base.css
+++ b/main/static/css/base.css
@@ -1,5 +1,5 @@
 * {
-    font-family: 'Avenir', 'Roboto', sans-serif;
+    font-family: 'Nunito', sans-serif;
     margin: 0px;
     padding: 0px;
 }
