--- a/main/templates/home.html
+++ b/main/templates/home.html
@@ -16,9 +16,9 @@ crumbo
         <img id="home-crumbo" src="../static/img/crumbo.png"/>
         <div id="home-icons">
             <p id="home-description"><em>our food adventures :~)</em></p>
-            <a href="/explore"><button id="home-explore-button">explore &rarr;</button></a>
-                <img id="home-grac" src="../static/img/grac-transparent-color.png"/>
-                <img id="home-cxlu" src="../static/img/cxlu-transparent-color.png"/>
+            <a href="/explore"><button id="home-explore-button" class="float-on-hover">explore &rarr;</button></a>
+            <a href=""><img id="home-grac" class="float-on-hover" src="../static/img/grac-transparent-color.png"/></a>
+            <a href=""><img id="home-cxlu" class="float-on-hover" src="../static/img/cxlu-transparent-color.png"/></a>
         </div>
     </div>
 </div>
