add profile pages

--- a/main/templates/home.html
+++ b/main/templates/home.html
@@ -17,8 +17,8 @@ crumbo
         <div id="home-icons">
             <p id="home-description"><em>our food adventures :~)</em></p>
             <a href="/explore"><button id="home-explore-button" class="float-on-hover">explore &rarr;</button></a>
-            <a href=""><img id="home-grac" class="float-on-hover" src="../static/img/grac-transparent-color.png"/></a>
-            <a href=""><img id="home-cxlu" class="float-on-hover" src="../static/img/cxlu-transparent-color.png"/></a>
+            <a href="/grac"><img id="home-grac" class="float-on-hover" src="../static/img/grac-transparent-color.png"/></a>
+            <a href="/cxlu"><img id="home-cxlu" class="float-on-hover" src="../static/img/cxlu-transparent-color.png"/></a>
         </div>
     </div>
 </div>
