add profile styling + refactoring animations

--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -8,6 +8,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@300;400;700&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="{% static 'css/base.css' %}">
+        <link rel="stylesheet" href="{% static 'css/animations.css' %}" />
         <link rel="shortcut icon" href="../static/img/favicon.ico"/>
         {% block styles %}{% endblock %}
         <title>
