profile page styling

--- a/main/static/css/grac.css
+++ b/main/static/css/grac.css
@@ -1,7 +1,7 @@
 .profile-container {
-  background-color: #f0d7bb;
+    background-color: #bab9eb;
 }
 
 .profile-container a {
-  color: #c9791e;
+  color: #3b3aa1;
 }
