--- a/main/templates/grac.html
+++ b/main/templates/grac.html
@@ -2,6 +2,7 @@
 {% block title %} grac | crumbo {%endblock %} 
 {% block styles %}
 <link rel="stylesheet" href="{% static 'css/profile.css' %}" />
+<link rel="stylesheet" href="{% static 'css/grac.css' %}" />
 {% endblock %} 
 
 {% block body %}
@@ -15,8 +16,11 @@
       <img src="../static/img/grac-transparent-color.png" />
     </div>
     <div class="profile-right">
-      <h1>it me,,,</h1>
-      <p>our profile pages are still a wip – pls come back later :^)</p>
+      <h1>grac</h1>
+      <br/>
+      <p><a href="https://www.gracejiang.me/" target="_blank">about</a></p>
+      <br/>
+      <p>hi, i'm grac (she/her) !</p>
     </div>
   </div>
 </div>
