--- a/main/templates/cxlu.html
+++ b/main/templates/cxlu.html
@@ -17,7 +17,9 @@
     </div>
     <div class="profile-right">
       <h1>it me,,,</h1>
-      <p>our profile pages are still a wip – pls come back later :^)</p>
+      <p>our profile pages are still a wip – pls come back later :^) asdf
+        our profile pages are still a wip – pls come back later :^)
+      </p>
     </div>
   </div>
 </div>
