christina prof page

--- a/main/templates/cxlu.html
+++ b/main/templates/cxlu.html
@@ -2,7 +2,7 @@
 {% block title %} cxlu | crumbo {%endblock %} 
 {% block styles %}
 <link rel="stylesheet" href="{% static 'css/profile.css' %}" />
-<link ref="stylesheet" href="{% static 'css/cxlu.css' %}" />
+<link rel="stylesheet" href="{% static 'css/cxlu.css' %}" />
 {% endblock %} 
 
 {% block body %}
@@ -16,10 +16,12 @@
       <img src="../static/img/cxlu-transparent-color.png" />
     </div>
     <div class="profile-right">
-      <h1>it me,,,</h1>
-      <p>our profile pages are still a wip – pls come back later :^) asdf
-        our profile pages are still a wip – pls come back later :^)
+      <h1>christiiina</h1>
+      <p><em>she/her</em></p>
+      <p>
+        hi, i'm christina, altho ppl also call me xtina or tina!
       </p>
+      <p>i like to draw, play guitar, climb, and listen to <a href="https://open.spotify.com/user/1229763100?si=570443848a0c4c08">music</a></p>
     </div>
   </div>
 </div>
