update grac profile + add filter frontend

--- a/main/templates/grac.html
+++ b/main/templates/grac.html
@@ -17,10 +17,11 @@
     </div>
     <div class="profile-right">
       <h1>grac</h1>
+      <p><a href="https://www.gracejiang.me/" target="_blank">about me</a> <a href="https://goo.gl/maps/Zig717tmzWAkX9mN6" target="_blank">food pins</a></p>
       <br/>
-      <p><a href="https://www.gracejiang.me/" target="_blank">about</a></p>
-      <br/>
-      <p>hi, i'm grac (she/her) !</p>
+      <p>hi, i'm grac (she/her) ! i'm from the bay area of ca (fremont) but am currently
+        residing in philly. hmu w food recs or for hh anytime :~)
+      </p>
     </div>
   </div>
 </div>
