--- a/main/templates/explore.html
+++ b/main/templates/explore.html
@@ -16,6 +16,12 @@ explore | crumbo
         <h1>food,,,</h1>
         <input type="text" placeholder="search"></input>
         <button type="submit">search</button>
+        <br/><br/>
+        <select name="mySelect" size="1">
+            <option>all</option>
+            <option>cxlu</option>
+            <option>grac</option>
+        </select>
     </div>
     
     {% for foodplace in foodplaces %} 
