--- a/main/templates/home.html
+++ b/main/templates/home.html
@@ -13,7 +13,7 @@ crumbo
 {% block body %}
 <div class="home-container">
     <div class="home-content">
-        <img id="home-crumbo" src="../static/img/crumbo.png"/>
+        <a href="https://github.com/gracejiang/crumbo" target="_blank"><img id="home-crumbo" src="../static/img/crumbo.png"/></a>
         <div id="home-icons">
             <p id="home-description"><em>our food adventures :~)</em></p>
             <a href="/explore"><button id="home-explore-button" class="float-on-hover">explore &rarr;</button></a>
