xtina bio update

--- a/main/templates/cxlu.html
+++ b/main/templates/cxlu.html
@@ -18,10 +18,13 @@
     <div class="profile-right">
       <h1>christiiina</h1>
       <p><em>she/her</em></p>
+      <br />
       <p>
-        hi, i'm christina, altho ppl also call me xtina or tina!
+        hi! i'm christina, from the <a target="_blank" href="https://vsco.co/skiesofplano/gallery">*dazzling land*</a> of plano, tx. 
+      </p> 
+      <p>
+        i like to paint, play guitar, climb, and listen to <a target="_blank" href="https://open.spotify.com/user/1229763100?si=570443848a0c4c08">music</a> &#9834
       </p>
-      <p>i like to draw, play guitar, climb, and listen to <a href="https://open.spotify.com/user/1229763100?si=570443848a0c4c08">music</a></p>
     </div>
   </div>
 </div>
